--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "dietary-questionnaire",
   "version": "1.0.0",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+	"build": "npx tailwindcss -i ./src/input.css -o ./public/styles.css"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.14.1",
-    "cors": "^2.8.5",
-    "body-parser": "^1.19.0"
+    "tailwindcss": "^3.4.3"
   }
 }
