--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       }
     },
     {
+      "src": "backend/server.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "public/**",
       "use": "@vercel/static"
     }
